--- a/data/Data_Processing_and_Exploration.tex
+++ b/data/Data_Processing_and_Exploration.tex
@@ -120,24 +120,11 @@ parameters to estimate:
 	Wt = a \cdot L^b
 \end{equation}
 
-The raw data looks as follows for cod, haddock and whiting:
+The raw data looks as follows for cod, megrim, anglerfishes, haddock, whiting,
+hake, plaice and sole:
 
 \begin{knitrout}\footnotesize
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{verbatim}
-##  [1] Chelidonichthys cuculus    Chelidonichthys lucerna   
-##  [3] Dicentrarchus labrax       Engraulis encrasicolus    
-##  [5] Gadus morhua               Glyptocephalus cynoglossus
-##  [7] Lepidorhombus whiffiagonis Lophius piscatorius       
-##  [9] Melanogrammus aeglefinus   Merlangius merlangus      
-## [11] Merluccius merluccius      Microstomus kitt          
-## [13] Mullus surmuletus          Phycis blennoides         
-## [15] Pleuronectes platessa      Pollachius pollachius     
-## [17] Scophthalmus maximus       Scophthalmus rhombus      
-## [19] Solea solea               
-## 20 Levels: Chelidonichthys cuculus ... Solea solea
-\end{verbatim}
-\end{kframe}\begin{figure}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}
 \includegraphics[width=\maxwidth]{figure/LWt-1} \caption[Estimates of individual weights at length for the gadoid species]{Estimates of individual weights at length for the gadoid species. Colours indicate individual years measurements}\label{fig:LWt}
 \end{figure}
 
@@ -165,15 +152,15 @@ the different morphological forms affecting the length weight relationship:
 
 \begin{kframe}
 \begin{alltt}
-\hlkwd{library}\hlstd{(stargazer)} \hlcom{# For nice model output}
-
 \hlstd{gads}  \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlstr{'Gadus morhua'}\hlstd{,} \hlstr{'Melanogrammus aeglefinus'}\hlstd{,}
            \hlstr{'Merluccius merluccius'}\hlstd{,} \hlstr{'Merlangius merlangus'}\hlstd{)}
 \hlstd{flats} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlstr{'Lepidorhombus whiffiagonis'}\hlstd{,} \hlstr{'Solea solea'}\hlstd{,} \hlstr{'Pleuronectes platessa'}\hlstd{)}
 \hlstd{lops}  \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlstr{'Lophius piscatorius'}\hlstd{,} \hlstr{'Lophius budegassa'}\hlstd{)}
 
-\hlstd{lm1.gad} \hlkwb{<-} \hlkwd{glm}\hlstd{(lWt} \hlopt{~} \hlstd{lL} \hlopt{+} \hlstd{Species} \hlopt{+} \hlstd{Year,} \hlkwc{data} \hlstd{=} \hlkwd{filter}\hlstd{(DF, Species} \hlopt{%in%} \hlstd{gads))}
-\hlstd{lm2.gad} \hlkwb{<-} \hlkwd{glm}\hlstd{(lWt} \hlopt{~} \hlstd{lL} \hlopt{+} \hlstd{Species,} \hlkwc{data} \hlstd{=} \hlkwd{filter}\hlstd{(DF, Species} \hlopt{%in%} \hlstd{gads))}
+\hlstd{lm1.gad} \hlkwb{<-} \hlkwd{glm}\hlstd{(lWt} \hlopt{~} \hlstd{lL} \hlopt{+} \hlstd{Species} \hlopt{+} \hlstd{Year,}
+               \hlkwc{data} \hlstd{=} \hlkwd{filter}\hlstd{(DF, Species} \hlopt{%in%} \hlstd{gads))}
+\hlstd{lm2.gad} \hlkwb{<-} \hlkwd{glm}\hlstd{(lWt} \hlopt{~} \hlstd{lL} \hlopt{+} \hlstd{Species,}
+               \hlkwc{data} \hlstd{=} \hlkwd{filter}\hlstd{(DF, Species} \hlopt{%in%} \hlstd{gads))}
 
 \hlkwd{stargazer}\hlstd{(lm1.gad, lm2.gad,} \hlkwc{font.size}  \hlstd{=} \hlstr{'small'}\hlstd{,} \hlkwc{align} \hlstd{= T,}
           \hlkwc{title} \hlstd{=} \hlstr{'glm output from the two model fits to gadoids'}\hlstd{,}
@@ -181,7 +168,7 @@ the different morphological forms affecting the length weight relationship:
 \end{alltt}
 \end{kframe}
 % Table created by stargazer v.5.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Mon, Jan 23, 2017 - 19:36:53
+% Date and time: Tue, Jan 24, 2017 - 11:48:18
 % Requires LaTeX packages: dcolumn 
 \begin{table}[H] \centering 
   \caption{glm output from the two model fits to gadoids} 
@@ -223,8 +210,10 @@ Akaike Inf. Crit. & \multicolumn{1}{c}{-6,427.297} & \multicolumn{1}{c}{-6,429.2
 \end{tabular} 
 \end{table} 
 \begin{kframe}\begin{alltt}
-\hlstd{lm1.flat} \hlkwb{<-} \hlkwd{glm}\hlstd{(lWt} \hlopt{~} \hlstd{lL} \hlopt{+} \hlstd{Species} \hlopt{+} \hlstd{Year,} \hlkwc{data} \hlstd{=} \hlkwd{filter}\hlstd{(DF, Species} \hlopt{%in%} \hlstd{flats ))}
-\hlstd{lm2.flat} \hlkwb{<-} \hlkwd{glm}\hlstd{(lWt} \hlopt{~} \hlstd{lL} \hlopt{+} \hlstd{Species,} \hlkwc{data} \hlstd{=} \hlkwd{filter}\hlstd{(DF, Species} \hlopt{%in%} \hlstd{flats))}
+\hlstd{lm1.flat} \hlkwb{<-} \hlkwd{glm}\hlstd{(lWt} \hlopt{~} \hlstd{lL} \hlopt{+} \hlstd{Species} \hlopt{+} \hlstd{Year,}
+                \hlkwc{data} \hlstd{=} \hlkwd{filter}\hlstd{(DF, Species} \hlopt{%in%} \hlstd{flats    ))}
+\hlstd{lm2.flat} \hlkwb{<-} \hlkwd{glm}\hlstd{(lWt} \hlopt{~} \hlstd{lL} \hlopt{+} \hlstd{Species,}
+                \hlkwc{data} \hlstd{=} \hlkwd{filter}\hlstd{(DF, Species} \hlopt{%in%} \hlstd{flats))}
 
 \hlkwd{stargazer}\hlstd{(lm1.flat, lm2.flat,} \hlkwc{font.size}  \hlstd{=} \hlstr{'small'}\hlstd{,} \hlkwc{align} \hlstd{= T,}
           \hlkwc{title} \hlstd{=} \hlstr{'glm output from the two model fits to flatfish'}\hlstd{,}
@@ -232,7 +221,7 @@ Akaike Inf. Crit. & \multicolumn{1}{c}{-6,427.297} & \multicolumn{1}{c}{-6,429.2
 \end{alltt}
 \end{kframe}
 % Table created by stargazer v.5.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Mon, Jan 23, 2017 - 19:36:53
+% Date and time: Tue, Jan 24, 2017 - 11:48:18
 % Requires LaTeX packages: dcolumn 
 \begin{table}[H] \centering 
   \caption{glm output from the two model fits to flatfish} 
@@ -297,14 +286,17 @@ fishbase: $a = 0.03330$, $b= 2.766$.
 \hlcom{## the geometric mean...}
 \hlstd{corr.fact.gad}  \hlkwb{<-} \hlkwd{exp}\hlstd{(}\hlkwd{sigma}\hlstd{(lm2.gad)}\hlopt{^}\hlnum{2}\hlopt{/}\hlnum{2}\hlstd{)}
 \hlstd{corr.fact.flat} \hlkwb{<-} \hlkwd{exp}\hlstd{(}\hlkwd{sigma}\hlstd{(lm2.flat)}\hlopt{^}\hlnum{2}\hlopt{/}\hlnum{2}\hlstd{)}
-\hlkwd{print}\hlstd{(}\hlkwd{paste}\hlstd{(}\hlstr{'Correction factor for gadoids='}\hlstd{,corr.fact.gad,}\hlstr{'\textbackslash{}n and flats = '}\hlstd{, corr.fact.flat))}
+\hlkwd{print}\hlstd{(}\hlkwd{paste}\hlstd{(}\hlstr{'Correction factor for gadoids='}\hlstd{,}\hlkwd{round}\hlstd{(corr.fact.gad,}\hlnum{3}\hlstd{),}
+            \hlstr{'and flats = '}\hlstd{,} \hlkwd{round}\hlstd{(corr.fact.flat,}\hlnum{3}\hlstd{)))}
 \end{alltt}
 \begin{verbatim}
-## [1] "Correction factor for gadoids= 1.01114083963943 \n and flats =  1.01841349658617"
+## [1] "Correction factor for gadoids= 1.011 and flats =  1.018"
 \end{verbatim}
 \begin{alltt}
-\hlstd{predDF}\hlopt{$}\hlstd{WtCorr[predDF}\hlopt{$}\hlstd{Species} \hlopt{%in%} \hlstd{gads]}  \hlkwb{<-} \hlstd{predDF}\hlopt{$}\hlstd{Wt[predDF}\hlopt{$}\hlstd{Species} \hlopt{%in%} \hlstd{gads]}\hlopt{*} \hlstd{corr.fact.gad}
-\hlstd{predDF}\hlopt{$}\hlstd{WtCorr[predDF}\hlopt{$}\hlstd{Species} \hlopt{%in%} \hlstd{flats]} \hlkwb{<-} \hlstd{predDF}\hlopt{$}\hlstd{Wt[predDF}\hlopt{$}\hlstd{Species} \hlopt{%in%} \hlstd{flats]}\hlopt{*} \hlstd{corr.fact.flat}
+\hlstd{predDF}\hlopt{$}\hlstd{WtCorr[predDF}\hlopt{$}\hlstd{Species} \hlopt{%in%} \hlstd{gads]}  \hlkwb{<-} \hlstd{predDF}\hlopt{$}\hlstd{Wt[predDF}\hlopt{$}\hlstd{Species} \hlopt{%in%} \hlstd{gads]}\hlopt{*}
+        \hlstd{corr.fact.gad}
+\hlstd{predDF}\hlopt{$}\hlstd{WtCorr[predDF}\hlopt{$}\hlstd{Species} \hlopt{%in%} \hlstd{flats]} \hlkwb{<-} \hlstd{predDF}\hlopt{$}\hlstd{Wt[predDF}\hlopt{$}\hlstd{Species} \hlopt{%in%} \hlstd{flats]}\hlopt{*}
+        \hlstd{corr.fact.flat}
 \hlstd{predDF}\hlopt{$}\hlstd{WtCorr[predDF}\hlopt{$}\hlstd{Species} \hlopt{%in%} \hlstd{lops]} \hlkwb{<-}  \hlstd{predDF}\hlopt{$}\hlstd{Wt[predDF}\hlopt{$}\hlstd{Species} \hlopt{%in%} \hlstd{lops]}
 
 \hlcom{# Plot the von bertalanffy fits}
@@ -444,16 +436,7 @@ There may be another covariate affecting doorspread, indicated by the
 clustering of some of the data...lets look at some of them.
 
 \begin{knitrout}\footnotesize
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-
-
-{\ttfamily\noindent\color{warningcolor}{\#\# Warning: Removed 955 rows containing missing values (geom\_point).}}
-
-{\ttfamily\noindent\color{warningcolor}{\#\# Warning: Removed 955 rows containing missing values (geom\_point).}}
-
-{\ttfamily\noindent\color{warningcolor}{\#\# Warning: Removed 955 rows containing missing values (geom\_point).}}
-
-{\ttfamily\noindent\color{warningcolor}{\#\# Warning: Removed 955 rows containing missing values (geom\_point).}}\end{kframe}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
 
 {\centering \includegraphics[width=\maxwidth]{figure/DoorSpread2-1} 
 
@@ -469,8 +452,6 @@ We will model this relationship with a gam.
 
 \begin{kframe}
 \begin{alltt}
-\hlkwd{library}\hlstd{(mgcv)}
-
 \hlcom{# Without covariate}
 \hlstd{m1} \hlkwb{<-} \hlkwd{gam}\hlstd{(DoorSpread} \hlopt{~} \hlstd{Depth,} \hlkwc{data} \hlstd{= HH)}
 \hlcom{#summary(m1)}
@@ -524,10 +505,7 @@ Full model looks best, but let's check the residuals against the covariates
 Residuals look OK, so let's check the predictions against the measurements...
 
 \begin{knitrout}\footnotesize
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-
-
-{\ttfamily\noindent\color{warningcolor}{\#\# Warning: Removed 1138 rows containing missing values (geom\_point).}}\end{kframe}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
 
 {\centering \includegraphics[width=\maxwidth]{figure/Doorspread3-1} 
 
@@ -590,23 +568,27 @@ The length data were converted to weight through the following process:
 		Celtic Sea area).
 \end{itemize}
 
+The output from an estimation of the length at minimum marketing size for
+anglerfishes was as follows:
+
 \begin{knitrout}\footnotesize
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{verbatim}
-## $root
-## [1] 32.35575
-## 
-## $f.root
-## [1] 1.712325e-07
-## 
-## $iter
-## [1] 10
-## 
-## $init.it
-## [1] NA
-## 
-## $estim.prec
-## [1] 6.103516e-05
+FALSE $root
+FALSE [1] 32.35575
+FALSE 
+FALSE $f.root
+FALSE [1] 1.712325e-07
+FALSE 
+FALSE $iter
+FALSE [1] 10
+FALSE 
+FALSE $init.it
+FALSE [1] NA
+FALSE 
+FALSE $estim.prec
+FALSE [1] 6.103516e-05
+FALSE [1] 0.5000002
 \end{verbatim}
 \end{kframe}
 
@@ -617,7 +599,7 @@ The length data were converted to weight through the following process:
 
 \begin{kframe}
 
-{\ttfamily\noindent\itshape\color{messagecolor}{\#\# Joining, by = c("{}Survey"{}, "{}Quarter"{}, "{}Country"{}, "{}Ship"{}, "{}Gear"{}, "{}StNo"{}, "{}HaulNo"{}, "{}Year"{}, "{}SpeciesName"{})}}\end{kframe}
+{\ttfamily\noindent\itshape\color{messagecolor}{FALSE Joining, by = c("{}Survey"{}, "{}Quarter"{}, "{}Country"{}, "{}Ship"{}, "{}Gear"{}, "{}StNo"{}, "{}HaulNo"{}, "{}Year"{}, "{}SpeciesName"{})}}\end{kframe}
 \end{knitrout}
 
 \section{Cefas survey data}
